--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
 
         <section class="grid two-col">
             <div class="icon-card grid-item pickup">
-                <!-- <img src="images/Rectangle1.png" alt="Pick up"> -->
+                <!-- <img src="/Just-Pizza/images/Rectangle1.png" alt="Pick up"> -->
                 <button>Pick up</button>
             </div>
             <div class="icon-card grid-item uber">
-                <!-- <img src="images/Rectangle2.png" alt="Uber eats"> -->
+                <!-- <img src="/Just-Pizza/images/Rectangle2.png" alt="Uber eats"> -->
                 <button>Uber Eats</button>
             </div>
             <div class="icon-card grid-item doordash">
-                <!-- <img src="images/Rectangle3.png" alt="Doordash"> -->
+                <!-- <img src="/Just-Pizza/images/Rectangle3.png" alt="Doordash"> -->
                 <button>Door Dash</button>
             </div>
             <div class="icon-card grid-item check">
-                <!-- <img src="images/Rectangle4.png" alt="Checkmenu"> -->
+                <!-- <img src="/Just-Pizza/images/Rectangle4.png" alt="Checkmenu"> -->
                 <button>Check Menu</button>
             </div>
 
@@ -109,9 +109,9 @@
                     <p>we make every pizza on a tasty 12” sourdough crust</p>
                 </div>
                 <!-- div.grid-item*3>img -->
-                <div class="grid-item"><img src="images/Margherita.jpg" alt="classic pizza"></div>
-                <div class="grid-item"><img src="images/Saycheese.jpeg" alt="classic pizza"></div>
-                <div class="grid-item"><img src="images/Canuck.jpeg" alt="classic pizza"></div>
+                <div class="grid-item"><img src="/Just-Pizza/images/Margherita.jpg" alt="classic pizza"></div>
+                <div class="grid-item"><img src="/Just-Pizza/images/Saycheese.jpeg" alt="classic pizza"></div>
+                <div class="grid-item"><img src="/Just-Pizza/images/Canuck.jpeg" alt="classic pizza"></div>
             </div>
         </section>
 <br>
@@ -123,9 +123,9 @@
                     <p>we make every pizza on a tasty 12” sourdough crust</p>
                 </div>
                 <!-- div.grid-item*3>img -->
-                <div class="grid-item"><img src="images/FilipinoBreakfast.jpeg" alt="classic pizza"></div>
-                <div class="grid-item"><img src="images/ChickenTikkaMasala.jpeg" alt="classic pizza"></div>
-                <div class="grid-item"><img src="images/CuminLamb.jpeg" alt="classic pizza"></div>
+                <div class="grid-item"><img src="/Just-Pizza/images/FilipinoBreakfast.jpeg" alt="classic pizza"></div>
+                <div class="grid-item"><img src="/Just-Pizza/images/ChickenTikkaMasala.jpeg" alt="classic pizza"></div>
+                <div class="grid-item"><img src="/Just-Pizza/images/CuminLamb.jpeg" alt="classic pizza"></div>
             </div>
         </section>
         <!-- cta means 'call to action' -->
