--- a/about.html
+++ b/about.html
@@ -97,14 +97,15 @@
         </div>
   
         <!-- Grid container for masonry layout -->
-        <div class="masonry grid-item">
-          <div class="item item1"><img src="images/about2.jpeg"></div>
-          <div class="item item2"><img src="images/about3.png"></div>
-          <div class="item item3"><img src="images/about4.png"></div>
-          <div class="item item4"><img src="images/about5.png"></div>
-          <div class="item item5"><img src="images/about6.jpeg"></div>
-          <div class="item item6"><img src="images/about7.jpeg"></div>
-        </div>
+      <div class="photo-gallery grid-item">
+        <img src="images/about3.png" alt="Gallery Image">
+        <img src="images/about4.png" alt="Gallery Image">
+        <img src="images/about5.png" alt="Gallery Image">
+        <img src="images/about6.jpeg" alt="Gallery Image">
+        <img src="images/about7.jpeg" alt="Gallery Image">
+        <img src="images/about2.jpeg" alt="Gallery Image">
+      </div>
+
   
       </section>
       
@@ -123,10 +124,8 @@
             <div class="card-body">
               <h2>Location</h2>
               <p>1629 Kingsway</p><p>Vancouver, BC V5N 2S2</p><p>(604) 566-8888</p>
-              <br>
               <h2>Hours of operation</h2>
               <p>Tue - Sun: 12-9pm</p><p>Closed Mondays</p>
-              <br>
               <h2>Join our team</h2>
               <p>Send your resume to hello@justpizzaplease.ca</p>
               <ion-icon name="logo-instagram" size="large"></ion-icon><ion-icon name="logo-tiktok" size="large"></ion-icon>
