--- a/checkout.html
+++ b/checkout.html
@@ -80,8 +80,7 @@
                     <!-- Order items will be injected here -->
                 </div>
                 <div class="summary-total">
-                    <strong>Total:</strong>
-                    <span id="summary-total-price">$0.00</span>
+                    <strong>Total:</strong> <span id="summary-total-price">$0.00</span>
                 </div>
                 <div id="checkout-error-message" class="error-message"></div>
                 <button type="submit" form="checkout-form" class="btn-place-order" >Place Order</button>
