--- a/index.html
+++ b/index.html
@@ -122,9 +122,14 @@
             <div class="grid-item">
                 <img src="images/POST.png" alt="people eat dinner together">
             </div>
-            <div class="grid-item">
-                <h2>Special Event is coming~</h2>
-                <p>Buy 1 get 1 free</p>
+            <div class="grid-item" style="margin: 0 18px;">
+                <h2>Special Event is coming</h2>
+                <h4>Tandoori Paneer Pizza</h4>
+                <p style="font-size: 1rem;">
+                    garlic white sauce, mozzarella, tandoori paneer, onion, red pepper, crema, fresh garlic, cilantro
+
+                </p>
+                <p style="font-weight: 400; color: black;">Buy 1 get 1 free</p>
                 <button>Check Detail</button>
             </div>
         </section>
@@ -148,10 +153,8 @@
                   <div class="card-body">
                     <h2>Location</h2>
                     <p>1629 Kingsway</p><p>Vancouver, BC V5N 2S2</p><p>(604) 566-8888</p>
-                    <br>
                     <h2>Hours of operation</h2>
                     <p>Tue - Sun: 12-9pm</p><p>Closed Mondays</p>
-                    <br>
                     <h2>Join our team</h2>
                     <p>Send your resume to hello@justpizzaplease.ca</p>
                     <ion-icon name="logo-instagram" size="large"></ion-icon><ion-icon name="logo-tiktok" size="large"></ion-icon>
@@ -165,7 +168,7 @@
      <!-- FOOTER -->
      <footer class="flex-row">
         <div class="logo footer">
-            <img src="images/logoicon.png" alt="pizza logo">
+            <a href="index.html"><img src="images/logoicon.png" alt="pizza logo"></a>
          </div>
          <nav class="desktopmenu">
             <!-- shortcut:ul.flex-row>li*4 -->
