--- a/menu.html
+++ b/menu.html
@@ -32,6 +32,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="about.html">About</a></li>
+            <!-- <li><a href="#">Contact</a></li> -->
           </ul>
         </nav>
         
@@ -41,6 +42,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li><a href="about.html">About</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <div class="mobilemenu">
@@ -267,9 +269,14 @@
 
         <section class="grid two-col cta">
             <div class="grid-item"><img src="images/POST.png" alt="people eat dinner together"></div>
-            <div class="grid-item">
-                <h2>Special Event is coming~</h2>
-                <p>Buy 1 get 1 free</p>
+            <div class="grid-item" style="margin: 0 18px;">
+                <h2>Special Event is coming</h2>
+                <h4>Tandoori Paneer Pizza</h4>
+                <p style="font-size: 1rem;">
+                    garlic white sauce, mozzarella, tandoori paneer, onion, red pepper, crema, fresh garlic, cilantro
+
+                </p>
+                <p style="font-weight: 400; color: black;">Buy 1 get 1 free</p>
                 <button>Check Detail</button>
             </div>
         </section>
@@ -287,9 +294,9 @@
             <div class="grid-item">
               <div class="card" style="width: 100%;"><div class="card-body">
                   <h2>Location</h2>
-                  <p>1629 Kingsway</p><p>Vancouver, BC V5N 2S2</p><p>(604) 566-8888</p><br>
+                  <p>1629 Kingsway</p><p>Vancouver, BC V5N 2S2</p><p>(604) 566-8888</p>
                   <h2>Hours of operation</h2>
-                  <p>Tue - Sun: 12-9pm</p><p>Closed Mondays</p><br>
+                  <p>Tue - Sun: 12-9pm</p><p>Closed Mondays</p>
                   <h2>Join our team</h2>
                   <p>Send your resume to hello@justpizzaplease.ca</p>
                   <ion-icon name="logo-instagram" size="large"></ion-icon><ion-icon name="logo-tiktok" size="large"></ion-icon>
